--- a/package.json
+++ b/package.json
@@ -15,23 +15,25 @@
   "keywords": [],
   "author": "jhimy-michel",
   "license": "MIT",
-  "main": "index.js",
   "bugs": {
     "url": "https://github.com/jhimy-michel/jmichel/issues"
   },
   "homepage": "https://github.com/jhimy-michel/jmichel#readme",
   "dependencies": {
-    "@chakra-ui/react": "^2.5.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "framer-motion": "^10.10.0",
-    "next": "^13.5.6",
+    "@chakra-ui/icons": "^2.0.15",
+    "@chakra-ui/react": "^2.4.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "framer-motion": "^8.4.0",
+    "next": "^13.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "three": "^0.148.0"
   },
   "devDependencies": {
-    "eslint": "^8.37.0",
-    "eslint-config-next": "^13.2.4",
-    "prettier": "^2.8.7"
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.1",
+    "prettier": "^2.8.2"
   }
 }
