--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "@chakra-ui/react": "^2.10.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.3",
     "framer-motion": "^8.5.5",
+    "gray-matter": "^4.0.3",
     "next": "^14.2.16",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.7.1",
